<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>dataworkshop</groupId>
  <artifactId>dataworkshop</artifactId>
  <version>1.1.1-SNAPSHOT</version>
  <name>Data Workshop</name>
  
 
  <properties>
    <maven.compiler.release>11</maven.compiler.release>
  </properties>
  
  <build>
    <sourceDirectory>src</sourceDirectory>
    <resources>
      <resource>
        <directory>src</directory>
        <excludes>
          <exclude>**/*.java</exclude>
        </excludes>
      </resource>
    </resources>
    <plugins>
      <plugin>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.8.0</version>
        <configuration>
          <release>11</release>
        </configuration>
      </plugin>
            <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>exec-maven-plugin</artifactId>
        <version>1.6.0</version>
        <executions>
          <execution>
            <goals>
              <goal>exec</goal>
            </goals>
          </execution>
        </executions>
        <configuration>
          <executable>java</executable>
          <!-- optional -->
          <workingDirectory>${project.build.outputDirectory}</workingDirectory>
          <arguments>
			<argument>-classpath</argument> 
			<classpath />
			<argument>dataWorkshop.DataWorkshop</argument>  
          </arguments>
        </configuration>
      </plugin>
    </plugins>
  </build>
  
  <dependencies>
    <dependency>
    <groupId>org.lucee</groupId>
	  <artifactId>xalan</artifactId>
	  <version>2.7.2</version>
    </dependency>
  </dependencies>
</project>